--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,8 +8,7 @@ provisioner:
   name: chef_solo
 
 platforms:
-  - name: ubuntu-14.04
-  - name: centos-7.2
+  - name: debian-8.7
 
 suites:
   - name: default
